Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92964

Empty tree not spoken

    XMLWordPrintable

Details

    • Linux/X11, macOS, Windows
    • 0d3f09ac02 (qt/qtbase/dev) 0d3f09ac02 (qt/tqtc-qtbase/dev) 3bdd3b8aa5 (qt/qtbase/6.4) 3bdd3b8aa5 (qt/tqtc-qtbase/6.4) 869c1e37a0 (qt/tqtc-qtbase/6.2) bf481d27f2 (qt/qtbase/6.3) bf481d27f2 (qt/tqtc-qtbase/6.3)

    Description

      When a tree (QTreeWidget) is empty, screenreader doesn't announce it, tree should have one item to be spoken.

      Steps to reproduce:

      -Create a minimal application with a QTreeWidget and a slider for example

      -Use tab-key to switch between items

      Actual behavior:

      -When you tab to QTreeWidget without any item, screenreader be silent

      Expected behavior:

      -Screenreader should announce the QTreeWidget label even if the tree is empty.

      Attachments

        For Gerrit Dashboard: QTBUG-92964
        # Subject Branch Project Status CR V

        Activity

          People

            anrocha André De La Rocha (Inactive)
            oreonan Corentin Bacqué-Cazenave
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes