Fix tree/table/list accessibility state

The accessibility class associated with trees, tables and lists was
reporting a default/empty state, causing issues with accessibility
tools.

Fixes: QTBUG-92964
Change-Id: I9c8ee5e7e582fd6b6a59cd70437eeddad0f4eb8e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 0d3f09ac0231fca114aa58553144b78f8040a2e1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>