src/widgets/accessible/itemviews.cpp
@@ -409,7 +409,27 @@ QAccessible::Role QAccessibleTable::role() const
 
 QAccessible::State QAccessibleTable::state() const
 {
-    return QAccessible::State();
+    QAccessible::State state;
+    const auto *w = view();
+
+    if (w->testAttribute(Qt::WA_WState_Visible) == false)
+        state.invisible = true;
+    if (w->focusPolicy() != Qt::NoFocus)
+        state.focusable = true;
+    if (w->hasFocus())
+        state.focused = true;
+    if (!w->isEnabled())
+        state.disabled = true;
+    if (w->isWindow()) {
+        if (w->windowFlags() & Qt::WindowSystemMenuHint)
+            state.movable = true;
+        if (w->minimumSize() != w->maximumSize())
+            state.sizeable = true;
+        if (w->isActiveWindow())
+            state.active = true;
+    }
+
+    return state;
 }
 
 QAccessibleInterface *QAccessibleTable::childAt(int x, int y) const
